--- a/lib/style/iconfont.wxss
+++ b/lib/style/iconfont.wxss
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'iconfont';  /* project id 879336 */
-  src: url('//at.alicdn.com/t/font_879336_n78jjzpre1h.eot');
-  src: url('//at.alicdn.com/t/font_879336_n78jjzpre1h.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_879336_n78jjzpre1h.woff') format('woff'),
-  url('//at.alicdn.com/t/font_879336_n78jjzpre1h.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_879336_n78jjzpre1h.svg#iconfont') format('svg');
+  src: url('//at.alicdn.com/t/font_879336_cj9kojt4ve.eot');
+  src: url('//at.alicdn.com/t/font_879336_cj9kojt4ve.eot?#iefix') format('embedded-opentype'),
+  url('//at.alicdn.com/t/font_879336_cj9kojt4ve.woff') format('woff'),
+  url('//at.alicdn.com/t/font_879336_cj9kojt4ve.ttf') format('truetype'),
+  url('//at.alicdn.com/t/font_879336_cj9kojt4ve.svg#iconfont') format('svg');
 }
 
 .iconfont {
@@ -33,12 +33,17 @@
 
 .icon-location:before { content: "\e790"; }
 
+.icon-container:before { content: "\e7b0"; }
+
 .icon-redenvelope:before { content: "\e7b2"; }
 
 .icon-like:before { content: "\e7c8"; }
 
 .icon-unlike:before { content: "\e7c9"; }
 
+.icon-monitor:before { content: "\e7e2"; }
+
 .icon-right:before { content: "\e7eb"; }
 
 .icon-gift:before { content: "\e842"; }
+
